# mercator

./: README.md  flotilla.yaml  pyproject.toml
.github/workflows/: codeatlas-check.yml  mercator-check.yml
.mercator/: atlas.html  coverage.json  meta.json  projects.json  repo-edges.json
.mercator/projects/mercator/: graph.md  meta.json  systems.json  systems.md
.mercator/projects/mercator/contracts/: mercator.json  mercator.md  mercator.render.atlas.json  mercator.render.atlas.md  mercator.render.json  mercator.render.md  mercator.stacks.json  mercator.stacks.md  tests.json  tests.md
benchmarks/: atlas-benchmarks.md  machine.txt  results.json  run_benchmarks.py
codeatlas/: __init__.py  __main__.py  boundaries.py  cli.py  coverage.py  diff.py  hooks.py  meta.py  paths.py  projects.py  query.py  refresh.py  repo_boundaries.py  repo_edges.py
codeatlas/render/: __init__.py  atlas_html.py  boundaries_md.py  contract_md.py  graph_md.py  systems_md.py
codeatlas/render/atlas/: __init__.py
codeatlas/render/atlas/static/: atlas.css  atlas.js  repo_index.js
codeatlas/render/atlas/templates/: repo_index.html  single_project.html
codeatlas/stacks/: python.py  rust.py  rust_assets.py  ts.py
codemap/: cli.py  detect.py  diff.py  refresh.py
codemap/render/: systems_md.py
codemap/stacks/: ts.py
mercator/: __init__.py  __main__.py  boundaries.py  cli.py  detect.py  diff.py  hooks.py  meta.py  migrate.py  paths.py  projects.py  query.py  refresh.py  repo_boundaries.py  repo_edges.py
mercator/render/: __init__.py  atlas_html.py  boundaries_md.py  contract_md.py  graph_md.py  systems_md.py
mercator/render/atlas/: __init__.py
mercator/render/atlas/static/: atlas.css  atlas.js  repo_index.js
mercator/render/atlas/templates/: repo_index.html  single_project.html
mercator/stacks/: __init__.py  _asset_common.py  dart.py  dart_assets.py  python.py  rust.py  rust_assets.py  ts.py  unity.py  unity_assets.py
plugin/: README.md
plugin/agents/: codemap-keeper.md
plugin/commands/: codeatlas.md
tests/: test_diff.py  test_projects.py  test_python_stack.py  test_repo_boundaries.py  test_repo_edges.py  test_ts_layer2.py
