[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mercator"
version = "0.5.0"
description = "Layered, AI-friendly codemap CLI for agent consumption. Produces systems/contracts/symbols slices in JSON."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Christopher Gulliver" }]
keywords = ["mercator", "codemap", "ai", "agents", "code-intelligence", "rust", "unity", "dart"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/ocgully/mercator"
Repository = "https://github.com/ocgully/mercator"
Issues = "https://github.com/ocgully/mercator/issues"

[project.scripts]
# New primary entry point.
mercator = "mercator.cli:main"
# Deprecation shim — prints a stderr warning and forwards to mercator.
# Scheduled for removal in the release after next.
codemap = "mercator.cli:deprecated_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mercator*"]

[tool.setuptools.package-data]
"mercator.render.atlas" = [
  "templates/*.html",
  "static/*.css",
  "static/*.js",
]
