[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codeatlas"
version = "0.6.0"
description = "Layered, AI-friendly codemap CLI for agent consumption. Produces systems/contracts/symbols slices in JSON."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Christopher Gulliver" }]
keywords = ["codeatlas", "mercator", "codemap", "ai", "agents", "code-intelligence", "rust", "unity", "dart"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/ocgully/codeatlas"
Repository = "https://github.com/ocgully/codeatlas"
Issues = "https://github.com/ocgully/codeatlas/issues"

[project.scripts]
# New primary entry point.
codeatlas = "codeatlas.cli:main"
# Deprecation shim — prints a stderr warning and forwards to `main`.
# Scheduled for removal in v2.0 (kept for two minor cycles).
mercator = "codeatlas.cli:main_deprecated_alias"
# Double-legacy shim from the original pre-mercator name.
codemap = "codeatlas.cli:deprecated_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codeatlas*"]

[tool.setuptools.package-data]
"codeatlas.render.atlas" = [
  "templates/*.html",
  "static/*.css",
  "static/*.js",
]
